# A-simlified-RAG-tool-for-Claude-Code-context-management

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Makefile  OpenAI_Open_Source_Pro_Mode.ipynb  RAG_script.sh  README.md  REFACTORING_README.md  digest.txt  docker-compose.phase1.yml  main.py  migrate_to_phase1.py  pyproject.toml
src/: .env.example  Dockerfile  docker-compose.yml  requirements.txt
src/astra_universal_rag/: categorization_system.py  claude_search.py  cli.py  code_aware_chunker.py  config.py  config_phase1.py  debug_chromadb.py  demo_enhanced_rag_api.py  demo_god_mode_phase2.py  demo_task_status.py  enhanced_commit_ingestion.py  god_mode_complete_demo.py  graph_models.py  graph_search.py  indexers.py  ingest_commits.py  ingest_pull_requests.py  main.py  models.py  optimization_manager.py  predictive_analysis.py  proactive_context_engine.py  rag_system.py  sdk_enhanced_indexer.py  security.py  test_commit_rag_integration.py  test_graph_integration.py  test_knowledge_graph.py  test_phase1_hybrid.py  test_phase3_integration.py  test_phase4_feedback.py  test_search_api.py
src/astra_universal_rag/connectors/: base_connector.py  jira_connector.py
src/astra_universal_rag/graph/: neo4j_adapter.py
src/astra_universal_rag/hybrid/: hybrid_rag.py
src/astra_universal_rag/ingestion/: dual_pipeline_ingestion.py  ingest_commits.py  ingest_pull_requests.py  modular_ingestion_engine.py
src/astra_universal_rag/schemas/: universal_schema.py
