[project]
name = "astra-universal-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "Peter",email = "35437407+trungkien1992@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "chromadb (>=1.0.15,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "gitpython (>=3.1.44,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "typer[all] (>=0.16.0,<0.17.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.3"
mypy = "^1.16.1"
pre-commit = "^4.2.0"

[tool.mypy]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["src.*"]

[tool.mypy.overrides."src.*"]
ignore_missing_imports = true
